--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
 			<artifactId>ojdbc6</artifactId>
 			<version>11.2.0.3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>5.1.34</version>
+		</dependency>
 	</dependencies>
 
 	<build>
