--- a/src/main/resources/config/jdbc.properties
+++ b/src/main/resources/config/jdbc.properties
@@ -1,6 +1,8 @@
 # database properties
 #app.jdbc.url=jdbc:oracle:thin:@192.168.1.250:1521:orcl
 #app.jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
+database_type=mysql
+
 app.jdbc.driverClassName=com.mysql.jdbc.Driver
 app.jdbc.url=jdbc:mysql://localhost:3306/iszt?useUnicode=true&characterEncoding=utf8
 app.jdbc.username=root
